addes pic for test

--- a/_posts/2015-01-21-gotalk.md
+++ b/_posts/2015-01-21-gotalk.md
@@ -1,7 +1,7 @@
 ---
 title: "Gotalk"
 layout: post
-og_image_url: "http://rsms.me/res/gotalk-intro.png"
+og_image_url: "nikolaos.soultanidis.com/res/home-bg.jpeg"
 description: "Gotalk exists to make it easy for programs to *talk with one another over the internet*, like a web app coordinating with a web server, or a bunch of programs dividing work amongst eachother"
 ---
 
