--- a/_posts/2013-07-09-dbx2013.md
+++ b/_posts/2013-07-09-dbx2013.md
@@ -1,7 +1,7 @@
 ---
 title: "DBX 2013"
 layout: post
-photo_url: "http://farm8.staticflickr.com/7451/9254559408_c34e7b9304_c.jpg"
+photo_url: "nikolaos.soultandis.com/res/home-bg.jpeg"
 comments: yes
 ---
 
