--- a/_posts/2013-07-09-dbx2013.md
+++ b/_posts/2013-07-09-dbx2013.md
@@ -1,7 +1,7 @@
 ---
 title: "DBX 2013"
 layout: post
-photo_url: "http://nikolaos.soultanidis.com/res/home-bg.jpeg"
+photo_url: "/res/home-bg.jpeg"
 comments: yes
 ---
 
